appId: com.example.tddboilerplate.dev
---
- tapOn: "Menu"
- tapOn: "Logout"
- tapOn: "Yes"